force-app/main/default/objects/Replacement_Field_Mapping__mdt/Replacement_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Replacement Field Mapping</label>
    <pluralLabel>Replacement Field Mappings</pluralLabel>
</CustomObject>