force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Autoselected__c.field-meta.xml
<CustomField>
    <fullName>Autoselected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True, if the disposition reason is auto selected and not manually by User</description>
    <label>Autoselected?</label>
    <type>Checkbox</type>
</CustomField>