force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Excluded_Replacement_Category__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Replacement_Category__c</fullName>
    <label>Excluded Replacement Category</label>
    <type>TextArea</type>
</CustomField>