force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/ExtraLogic__c.field-meta.xml
<CustomField>
    <fullName>ExtraLogic__c</fullName>
    <label>Extra Logic Hint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>