force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/FieldAPINames__c.field-meta.xml
<CustomField>
    <fullName>FieldAPINames__c</fullName>
    <label>Consolidation Field API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>