force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/First_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>First_Filter_Criteria__c</fullName>
    <label>First Filter Criteria</label>
    <type>TextArea</type>
</CustomField>