force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/IncludeMillis__c.field-meta.xml
<CustomField>
    <fullName>IncludeMillis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Millis</label>
    <type>Checkbox</type>
</CustomField>