force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/LowerBoundM__c.field-meta.xml
<CustomField>
    <fullName>LowerBoundM__c</fullName>
    <description>Lower Bound in Months</description>
    <label>Lower Bound (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>