force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/MismatchQuantitySkip__c.field-meta.xml
<CustomField>
    <fullName>MismatchQuantitySkip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MismatchQuantitySkip</label>
    <type>Checkbox</type>
</CustomField>