force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Label__c</fullName>
    <description>Label of picklist</description>
    <label>Picklist Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>