force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <description>API name of Pickllist</description>
    <label>Picklist Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>