force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Level__c</fullName>
    <description>stores product level</description>
    <label>Product Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>