force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Product_Type_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Sub_Type__c</fullName>
    <description>This field holds value for SKU Replacement Screen for holding attributes</description>
    <label>Product Type/Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>