force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Quote_Line_API_Fields__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_API_Fields__c</fullName>
    <inlineHelpText>All API field names to be queired</inlineHelpText>
    <label>Quote Line API Fields</label>
    <type>TextArea</type>
</CustomField>