force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Specifies type of Quote</description>
    <label>Quote Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>