force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Second_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Second_Filter_Criteria__c</fullName>
    <label>Second Filter Criteria</label>
    <type>TextArea</type>
</CustomField>