force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/SKU_Attribute_Fields__c.field-meta.xml
<CustomField>
    <fullName>SKU_Attribute_Fields__c</fullName>
    <label>SKU Attribute Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>