force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/SMS_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>SMS_Page_Size__c</fullName>
    <label>SMS_Page_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>