force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/Third_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Third_Filter_Criteria__c</fullName>
    <label>Third Filter Criteria</label>
    <type>TextArea</type>
</CustomField>