force-app/main/default/objects/Replacement_Field_Mapping__mdt/fields/UpperBoundM__c.field-meta.xml
<CustomField>
    <fullName>UpperBoundM__c</fullName>
    <description>Upper Bound in Months</description>
    <label>Upper Bound (M)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>